--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,10 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
+    testImplementation 'org.testng:testng:7.1.0'
+
 }
 
-tasks.test {
-    useJUnitPlatform()
+test {
+    useTestNG()
 }
